--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{
     font-family: 'Poppins', sans-serif;
+    margin: 0;
 }
 h1{
     font-size: 50px;
@@ -24,4 +25,8 @@ section{
     border-radius: 7%;
     color: white;
     font-weight: 700;
+}
+.top-banner{
+    background-image: url(images/0710115045.png);
+    background-repeat: no-repeat;
 }
