--- a/style.css
+++ b/style.css
@@ -31,3 +31,8 @@ section{
     background-image: url(images/0710115045.png);
     background-repeat: no-repeat;
 }
+.dream-big{
+    background-image: url(kissclipart-education-clipart-arrow-symbol-infogram-5e9b85018c04cf12.png);
+    background-position: right;
+    background-repeat: no-repeat;
+}
